--- a/index.html
+++ b/index.html
@@ -82,40 +82,45 @@
                             <label data-i18n="delay-symbols">Símbolos (, ; : ! ?)</label>
                             <select id="delay-symbols">
                                 <option value="0">0</option>
-                                <option value="0.05">0.05</option>
-                                <option value="0.1" selected>0.1</option>
+                                <option value="0.1">0.1</option>
                                 <option value="0.2">0.2</option>
-                                <option value="0.3">0.3</option>
+                                <option value="0.3" selected>0.3</option>
+                                <option value="0.4">0.4</option>
                                 <option value="0.5">0.5</option>
+                                <option value="0.8">0.8</option>
                                 <option value="1.0">1.0</option>
+                                <option value="2.0">2.0</option>
                             </select>
                         </div>
                         <div class="setting-item">
                             <label data-i18n="delay-period">Puntos (.)</label>
                             <select id="delay-period">
                                 <option value="0">0</option>
-                                <option value="0.1">0.1</option>
-                                <option value="0.2">0.2</option>
-                                <option value="0.3" selected>0.3</option>
+                                <option value="0.3">0.3</option>
                                 <option value="0.5">0.5</option>
-                                <option value="0.8">0.8</option>
+                                <option value="0.8" selected>0.8</option>
                                 <option value="1.0">1.0</option>
                                 <option value="1.5">1.5</option>
+                                <option value="2.0">2.0</option>
+                                <option value="3.0">3.0</option>
                             </select>
                         </div>
                         <div class="setting-item">
                             <label data-i18n="delay-newline">Nueva Línea (\n)</label>
                             <select id="delay-newline">
                                 <option value="0">0</option>
-                                <option value="0.1">0.1</option>
-                                <option value="0.2">0.2</option>
-                                <option value="0.3">0.3</option>
-                                <option value="0.4">0.4</option>
-                                <option value="0.5" selected>0.5</option>
-                                <option value="0.7">0.7</option>
+                                <option value="0.5">0.5</option>
+                                <option value="0.8">0.8</option>
                                 <option value="1.0">1.0</option>
+                                <option value="1.2" selected>1.2</option>
+                                <option value="1.5">1.5</option>
                                 <option value="2.0">2.0</option>
+                                <option value="3.0">3.0</option>
+                                <option value="4.0">4.0</option>
                             </select>
+                        </div>
+                        <div class="setting-item reset-container">
+                            <button id="reset-defaults-btn" data-i18n="reset-defaults">Resetear a defaults</button>
                         </div>
                     </div>
                     <!-- Column 2: Word Length Factors -->
